Let MySQL root password be saved to config file. This is stored in clear text right now in the JSON setings file, which I know is bad practice, but I am unsure how to handle it properly. This password is also stored in clear text in various OpenSim config files so it may be a non-issue? It will give the user a warning about it though before saving.

--- a/PortableMySQL8/PortableMySQL8.csproj
+++ b/PortableMySQL8/PortableMySQL8.csproj
@@ -96,6 +96,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="BoolExtensions.cs" />
     <Compile Include="IniFile.cs" />
     <Compile Include="ProcessHelpers.cs" />
     <Compile Include="Settings.cs" />
