--- a/PortableMySQL8/PortableMySQL8.csproj
+++ b/PortableMySQL8/PortableMySQL8.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{1E290F29-9BB9-4C49-8550-DC8C87B9EA6C}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>PortableMySQL8</RootNamespace>
     <AssemblyName>PortableMySQL8</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
