Add some content to the Database tab which will eventually be used to make the required OpenSim databases

--- a/PortableMySQL8/PortableMySQL8.csproj
+++ b/PortableMySQL8/PortableMySQL8.csproj
@@ -118,6 +118,9 @@
     <Compile Include="Helpers\IniFile.cs" />
     <Compile Include="Helpers\ProcessHelpers.cs" />
     <Compile Include="Settings.cs" />
+    <Compile Include="Tabs\TabDatabase.xaml.cs">
+      <DependentUpon>TabDatabase.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Themes\WindowTheming.cs" />
     <Compile Include="Helpers\SQLTools.cs" />
     <Compile Include="Version.cs" />
@@ -133,6 +136,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Tabs\TabDatabase.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
